# 2023-autumn-ab-java-hw-13-To-n-y

./: .docker-env  Makefile  config.py  docker-compose-server.yml  main.py  middleware.py  pyproject.toml
.github/workflows/: checks.yml  tests.yml
docker/: Dockerfile.server  Dockerfile.test  docker-compose-tests.yml
frontend/: all_tasks.html  home.html
src/: jwt_utils.py  routes.py  security.py
src/handlers/: list_handlers.py  task_handlers.py  user_handlers.py
src/models/: list.py  task.py  user.py
src/repo/: list.py  task.py  user.py
src/services/: list_service.py  task_service.py  user_service.py
